fix/ pantalla completa

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
+
+  <meta name="viewport" content="width=device-width, toolbar=no, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+  <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/svg+xml" href="/icon.png" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Colfone</title>
 </head>
 
